<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_send_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10sp"
        android:hint="@string/enter_text_here"
        android:importantForAutofill="no"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:layout_toEndOf="@+id/et_send_text"
        android:text="@string/send" />

    <ListView
        android:id="@+id/lv_found_devices"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_below="@+id/et_send_text"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btn_on_off_bt"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_found_devices"
        android:layout_marginTop="10sp"
        android:text="@string/on_off" />

    <Button
        android:id="@+id/btn_discoverable_bt"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_found_devices"
        android:layout_toEndOf="@+id/btn_on_off_bt"
        android:layout_marginTop="10sp"
        android:text="@string/discoverable" />
    <Button
        android:id="@+id/btn_close_connection_bt"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_found_devices"
        android:layout_toEndOf="@+id/btn_find_bt"
        android:layout_marginTop="10dp"
        android:text="@string/close_connection" />

    <Button
        android:id="@+id/btn_find_bt"
        android:layout_width="wrap_content"
        android:textSize="12sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lv_found_devices"
        android:layout_marginTop="10sp"
        android:layout_toEndOf="@+id/btn_discoverable_bt"
        android:text="@string/find" />



    <TextView
        android:id="@+id/tw_received_msg"
        android:layout_width="match_parent"
        android:layout_marginTop="30sp"
        android:layout_height="150sp"
        android:layout_below="@id/btn_on_off_bt"
        android:background="#DEEBF6"/>

</RelativeLayout>